--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
   <body class="container">
     <!-- Header -->
     <header class="side">
@@ -137,6 +137,5 @@
       </section>
     </main>
 
-    <script src="/assets/js/main.js"></script>
   </body>
 </html>
