--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ text {
         </div>
 
         <img
-          src="https://media.licdn.com/dms/image/v2/D5603AQFCj_KUVIAt2w/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1713414255112?e=1734566400&v=beta&t=pBlqLmVvQVLPme9oQ-uKV6vkzFdMHuarRfTM0xnq078"
+          src="https://storage.googleapis.com/bucketsaya/google-storage-service/profilsaya.jpg"
           alt="profile"
         />
 
