--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ text {
         </div>
 
         <img
-          src="https://storage.googleapis.com/bucketsaya/google-storage-service/profilsaya.jpg"
+          src="https://storage.googleapis.com/bucketsaya/%20google-storage-service/profilsaya.jpg"
           alt="profile"
         />
 
